# signedDistance-pyAMREX

./: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  INSTALLATION.md  LIBRARY_STRUCTURE.md  NATO_STANAG_INTEGRATION.md  README.md  _sdf_common.py  bash.exe.stackdump  me.md  pyproject.toml  sdf_lib.py  setup.py  test_visualization.py
2d/: visualization_2d.py
3d/: __init__.py  amrex_sdf.py  examples.py  geometry.py  grid.py  visualization.py
docs/: API_DOCUMENTATION.md  INSTALLATION.md  LIBRARY_STRUCTURE.md  numpy_vs_amrex_benchmark.md
examples/: COMPLEX_EXAMPLE_EXPECTED_OUTPUT.md  README.md  complex_example.py  elongation_example.py  intersection_example.py  nato_stanag_4496_test.py  simple_visualization_2d_example.py  simple_visualization_example.py  subtraction_example.py  uman.py  union_example.py
examples/amrex/: amrex_demo_2d.py  amrex_demo_2d_yt.py  amrex_demo_3d.py  amrex_demo_3d_yt.py  render_surface_from_plotfile.py  visit_render_2d.py  visit_render_3d.py
examples/amrex/output/plt_box.old.1049900/Level_0/: Cell_D_00000  Cell_H
examples/amrex/output/plt_box.old.2648700/Level_0/: Cell_D_00000
examples/amrex/output/plt_box/Level_0/: Cell_H
examples/amrex/output/plt_circle.old.2217200/Level_0/: Cell_D_00000
examples/amrex/output/plt_circle.old.3994200/: Header
examples/amrex/output/plt_hexagon.old.0805700/Level_0/: Cell_H
examples/amrex/output/plt_hexagon.old.5151900/Level_0/: Cell_D_00000
examples/amrex/output/plt_round_box.old.2415800/: Header
examples/amrex/output/plt_round_box.old.2415800/Level_0/: Cell_D_00000  Cell_H
examples/amrex/output/plt_rounded_box.old.1976800/Level_0/: Cell_H
examples/amrex/output/plt_rounded_box/Level_0/: Cell_D_00000
examples/amrex/output/plt_subtract/Level_0/: Cell_D_00000  (+1 more)
examples/img2sdf/: Example_heds.py  MULTIPHASE_TEST.py  img2sdf_3d_showcase.py  morphometry_3d_demo.py  volume_3d_example.py
examples/img2sdf/HEDS/: HEDS.json
examples/img2sdf/MULTIPHASE_TEST/: MULTIPHASE_TEST.json
examples/sdf2d/: gallery_2d.py  random_distribution_2d_demo.py
examples/sdf3d/: README.md  complex_example.py  csg_tree_demo.py  elongation_example.py  gallery_3d.py  intersection_example.py  metamaterials_demo.py  morphometry_stats_demo.py  nato_stanag_4496_test.py  random_distribution_demo.py  subtraction_example.py  union_example.py
examples/stl2sdf/: artillery_shell.stl  military_shapes_demo.py  missile.stl  nasa_boolean_demo.py  nasa_shapes_demo.py
examples/stl2sdf/output/: artillery_shell_sdf.npy  mars_wheel_sdf.npy  missile_sdf.npy  nasa_boolean_report.html  nasa_shapes_report.html  orion_plug_sdf.npy
img2sdf/: __init__.py  _pipeline.py  amrex.py  geometry.py  geometry3d.py  grid.py  grid3d.py  image_leaf.py
img2sdf/io/: __init__.py  hdf5.py
img2sdf/morphometry/: __init__.py  morphometry.py  morphometry3d.py
img2sdf/preprocessing/: __init__.py  preprocess.py
img2sdf/segmentation/: __init__.py  cv_multi.py  cv_single.py  cv_single_3d.py  segmentation.py
scripts/: gallery_2d.py  gallery_3d.py  microgen3d_img2sdf_demo.py  render_all_sdfs.py  render_all_sdfs_3d.py  render_all_sdfs_plotfiles.py  render_surface_from_plotfile.py  test_microgen3d_hf.py
sdf2d/: __init__.py  _loader.py  amrex.py  distributions.py  geometry.py  grid.py  primitives.py
sdf3d/: __init__.py  _loader.py  amrex.py  distributions.py  geometry.py  grid.py  metamaterials.py  primitives.py
sdf3d/.ipynb_checkpoints/: __init__-checkpoint.py  _loader-checkpoint.py  geometry-checkpoint.py
sdf3d/complex/: __init__.py  nato_stanag.py
sdf3d/complex/.ipynb_checkpoints/: rocket_assembly-checkpoint.py
sdf3d/examples/: nato_stanag.py  rocket_assembly.py
sdf_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdf_stl/: main.py
stl2sdf/: __init__.py  _math.py  geometry.py
tests/: test_amrex_2d.py  test_amrex_3d.py  test_complex.py  test_distributions.py  test_img2sdf_3d.py  test_metamaterials.py  test_sdf2d_geometry.py  test_sdf2d_grid.py  test_sdf3d_geometry.py  test_sdf3d_grid.py  test_stl2sdf.py
verification/: verify_2d.py
(+7 files in other folders)
