[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf-library"
version = "0.1.0"
description = "2D and 3D Signed Distance Function library with optional AMReX integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.9",
    "h5py>=3.0",
]

# User-facing extras: install with `pip install sdf-library[viz]` or `[stl]`
[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
    "scikit-image>=0.19.0",
    "plotly>=5.0",
    "yt>=4.2.1",
    "opencv-python>=4.5",
    "scikit-learn>=1.4",
    "Pillow>=9.0",
]
stl = [
    # C++ library for fast SDF evaluation of STL meshes.
    # Requires a C++14 compiler; not always available as a pre-built wheel.
    # Install: pip install pysdf   (or conda install -c conda-forge pysdf)
    "pysdf>=0.1.9",
]

# Pick the variant matching your CUDA version; only one should be installed.
# cupy-cuda11x for CUDA 11, cupy-cuda12x for CUDA 12.
gpu = [
    "cupy-cuda12x>=12.0",
]

# Developer tools: install with `uv sync --group dev`
# These are NOT shipped to end users.
[dependency-groups]
dev = [
    "pytest>=7.0",
    "ty>=0.0.1",
    "marimo>=0.17.6",
]
# pyAMReX is NOT on PyPI — install separately via:
#   conda create -n pyamrex -c conda-forge pyamrex
# No entry here; uv.lock only covers resolvable packages.

[tool.setuptools.packages.find]
where = ["."]
include = ["sdf2d*", "sdf3d*", "stl2sdf*","img2sdf*",]

[tool.setuptools]
py-modules = ["_sdf_common"]
